Clean up various IDE warns in ExtensionRegistry